--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "eslint-config-next": "^15.2.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
