--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "sass": "^1.85.1",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
